--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,12 @@
       <img class="logo" src="assets/img/US_TUTORIAL.png" alt="biochem logo" width="1000" height="521" />
       </div>
       </div>
-      <a href="https://arvpinto.github.io/dynamic_qmmm_cp2k/" class="btn"><b>Tutorial</b> <br> Main Page</a>
-      <a href="https://arvpinto.github.io/dynamic_qmmm_cp2k/enzyme_TS_cp2k_I.html" class="btn"><b>Section I</b> <br> Geometry Optimization</a>
-      <a href="https://arvpinto.github.io/dynamic_qmmm_cp2k/enzyme_TS_cp2k_II.html" class="btn"><b>Section II</b> <br> Equilibration</a>
-      <a href="https://arvpinto.github.io/dynamic_qmmm_cp2k/enzyme_TS_cp2k_III.html" class="btn"><b>Section III</b> <br> Molecular Dynamics</a>
-      <a href="https://arvpinto.github.io/dynamic_qmmm_cp2k/enzyme_TS_cp2k_IV.html" class="btn"><b>Section IV</b> <br> Umbrella Sampling</a>
-      <a href="https://arvpinto.github.io/dynamic_qmmm_cp2k/enzyme_TS_cp2k_V.html" class="btn"><b>Section V</b> <br> Result Analysis</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/" class="btn"><b>Tutorial</b> <br> Main Page</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_I.html" class="btn"><b>Section I</b> <br> Geometry Optimization</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_II.html" class="btn"><b>Section II</b> <br> PES Scan</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_III.html" class="btn"><b>Section III</b> <br> Nudgded Elastic Band</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_IV.html" class="btn"><b>Section IV</b> <br> Vibrational Analysis</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_V.html" class="btn"><b>Section V</b> <br> Dimer Method</a>
       <center>
     </header>
 
