--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
     </main>
     <footer class="site-footer" role="banner">
       <center>
-      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/" class="btn"><b>Tutorial</b> <br> Main Page</a>
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_main.html" class="btn"><b>Tutorial</b> <br> Main Page</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_I.html" class="btn"><b>Section I</b> <br> Geometry Optimization</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_II.html" class="btn"><b>Section II</b> <br> PES Scan</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_III.html" class="btn"><b>Section III</b> <br> Nudgded Elastic Band</a>
