--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -30,10 +30,11 @@ $hr-border-color: #BBBBBB !default;
 
 .project-name {
   font-size: 200%;
-  width: 80%;
+  width: 50%;
   text-align: center;
   padding-top: 0px;
   padding-bottom: 0px;
+  text-shadow: 0 0 3px #272727, 0 0 5px #272727;
 }
 
 .page-header {
@@ -43,15 +44,15 @@ $hr-border-color: #BBBBBB !default;
   background-image: linear-gradient(to top, #FFFFFF 0%, #272727 100%);
 }
 
-.header-left {
-  float: left;
-  width: 70%;
+.row .header-left {
+  position: absolute;
+  width: 100%;
   align-items: center;
   vertical-align: middle;
 }
 
 .header-right {
-  float: left;
+  float: right;
   width: 30%;
 }
 
