--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,26 +31,29 @@
       <img class="logo" src="assets/img/US_TUTORIAL.png" alt="biochem logo" width="1000" height="521" />
       </div>
       </div>
+      <center>
+    </header>
+      <div class="buttongrp" style="text-align:center">
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/" class="btn"><b>Tutorial</b> <br> Main Page</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_I.html" class="btn"><b>Section I</b> <br> Geometry Optimization</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_II.html" class="btn"><b>Section II</b> <br> PES Scan</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_III.html" class="btn"><b>Section III</b> <br> Nudgded Elastic Band</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_IV.html" class="btn"><b>Section IV</b> <br> Vibrational Analysis</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_V.html" class="btn"><b>Section V</b> <br> Dimer Method</a>
-      <center>
-    </header>
-
+      </div>
     <main id="content" class="main-content" role="main">
       {{ content }}
     </main>
-    <footer class="site-footer" role="banner">
-      <center>
-      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_main.html" class="btn"><b>Tutorial</b> <br> Main Page</a>
+      <div class="buttongrp" style="text-align:center">
+      <a href="https://arvpinto.github.io/enzyme_neb_cp2k/" class="btn"><b>Tutorial</b> <br> Main Page</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_I.html" class="btn"><b>Section I</b> <br> Geometry Optimization</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_II.html" class="btn"><b>Section II</b> <br> PES Scan</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_III.html" class="btn"><b>Section III</b> <br> Nudgded Elastic Band</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_IV.html" class="btn"><b>Section IV</b> <br> Vibrational Analysis</a>
       <a href="https://arvpinto.github.io/enzyme_neb_cp2k/enzyme_TS_cp2k_V.html" class="btn"><b>Section V</b> <br> Dimer Method</a>
+      </div>
+    <footer class="site-footer" role="banner">
+      <center>
       <br>
       <br>
       {% if site.github.is_project_page %}
