--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,7 @@ $hr-border-color: #BBBBBB !default;
   padding-top: 0px;
   padding-bottom: 0px;
   text-shadow: 0 0 3px #272727, 0 0 5px #272727;
+  color: #FFFFFF;
 }
 
 .page-header {
@@ -44,9 +45,15 @@ $hr-border-color: #BBBBBB !default;
   background-image: linear-gradient(to top, #FFFFFF 0%, #272727 100%);
 }
 
+.header-left {
+  width: 100%;
+  align-items: center;
+  vertical-align: middle;
+  color: #272727;
+}
+
 .header-right {
-  float: right;
-  width: 30%;
+   width: 30%;
 }
 
 .page-header .logo {
