--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
       <br>
       <br>
       {% if site.github.is_project_page %}
-        <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
+        <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained at <a href="https://arvpinto.github.io/">{{ site.github.owner_name }}</a>.</span>
       {% endif %}
       <br>
       <center>
